# tauri-leptos-app

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  styles.css
backend/: Cargo.toml
backend/src/: lib.rs
itunes-xml/: Cargo.toml
itunes-xml/src/: lib.rs
itunes-xml/tests/fixtures/: Playlist-_lin next party.xml  single-track.xml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  types.rs
types/src/: lib.rs
