[package]
name = "tauri-leptos-app-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itunes-xml = { path = "itunes-xml" }
types = { path = "types" }
leptos = { version = "0.5.2", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys" , features = ["all"]}

[workspace]
members = ["src-tauri", "itunes-xml", "types"]
