[package]
name = "tauri-leptos-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
itunes-xml = { path = "../itunes-xml" }
backend = { path = "../backend" }

tauri = { version = "1.3", features = [ "fs-exists", "fs-rename-file", "fs-remove-dir", "fs-read-dir", "fs-create-dir", "fs-remove-file", "fs-copy-file", "fs-read-file", "fs-write-file", "dialog", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
